# Portfolio-Risk-Manager

./: .gitignore  CMakeLists.txt  README.md  debug.sh  requirements.txt  run.sh  test.sh
include/: DataHandler.hpp  Globals.hpp  MonteCarloEngine.hpp  Portfolio.hpp  PortfolioOptimisation.hpp  PortfolioOptimiser.hpp  PortfolioUtils.hpp  RandomGenerator.hpp
include/lib/: pcg_extras.hpp  pcg_random.hpp
scripts/: assets.py  currency_utils.py  display_portfolios.py  frontier.py  paths.py  requirements.txt  trade_analysis.py  trading212.py
src/: MonteCarloEngine.cpp  Portfolio.cpp  PortfolioOptimisation.cpp  PortfolioOptimiser.cpp  PortfolioUtils.cpp  main.cpp
